--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
 <head>
   <title>밍♡뿡</title>
 <meta charset="utf-8">
+<style>
+  a {
+    color:black;
+    text-decoration:none;
+  }
+</style>
 </head>
 
 <body>
@@ -17,7 +23,7 @@
 <u>하앙</u>
 <strong>항.미.고.사.</strong>
 <p><br>ㅈㅈㅎ과 ㅇㅈㅇ은 운명이다. 평생 알콩달콩 하앙 쪽</p>
-<img src="couple.jpg" width="60%">
+<img src="반지사진.jpg" width="50%">
 <p><p style="margin-top:45px;">밍밍이와 뿡뿡이는 2019.10.03 부터 평생을 사랑하다 행복하게 오래오래 산다.</p>
 </body>
 </html>
