--- a/index.html
+++ b/index.html
@@ -3,27 +3,24 @@
 <head>
   <title>밍♡뿡</title>
 <meta charset="utf-8">
-<style>
-  a {
-    color:black;
-    text-decoration:none;
-  }
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-<h1><a href="index.html">밍밍이와 뿡뿡이</a></h1>
-<ol>
-  <li><a href="1.html">밍밍이</a></li>
-  <li><a href="2.html">뿡뿡이</a></li>
-</ol>
-
-<h2>ㅈㅈㅎ♥ㅇㅈㅇ</h2>
-<h5><a href="https://www.youtube.com/watch?v=V3pkC1hE-as" target="_blank" title="이거배운영상">밍밍이 뿡뿡이</a></h5>
-<u>하앙</u>
-<strong>항.미.고.사.</strong>
-<p><br>ㅈㅈㅎ과 ㅇㅈㅇ은 운명이다. 평생 알콩달콩 하앙 쪽</p>
-<img src="반지사진.jpg" width="50%">
-<p><p style="margin-top:45px;">밍밍이와 뿡뿡이는 2019.10.03 부터 평생을 사랑하다 행복하게 오래오래 산다.</p>
+  <h1><a href="index.html" style="color:orange">밍밍이와 뿡뿡이</a></h1>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html">밍밍이</a></li>
+      <li><a href="2.html">뿡뿡이</a></li>
+    </ol>
+  <div id="article">
+    <strong>ㅈㅈㅎ♥ㅇㅈㅇ</strong>
+    <h5><a href="https://www.youtube.com/watch?v=V3pkC1hE-as" target="_blank" title="이거배운영상">항.미.고.사.</a></h5>
+    <u>하앙</u>
+    <p><br>ㅈㅈㅎ과 ㅇㅈㅇ은 운명이다. 평생 알콩달콩 하앙 쪽</p>
+    <img src="반지사진.jpg" width="50%">
+    <p><p style="margin-top:45px;">밍밍이와 뿡뿡이는 2019.10.03 부터 평생을 사랑하다 행복하게 오래오래 산다.</p>
+  </div>
+  </div>
 </body>
 </html>
