--- a/1.html
+++ b/1.html
@@ -3,26 +3,24 @@
 <head>
   <title>밍♡뿡</title>
 <meta charset="utf-8">
-<style>
-  a {
-    color:black;
-    text-decoration:none;
-  }
-</style>
+<link rel="stylesheet" href="style.css"
 </head>
 
 <body>
-<h1><a href="index.html">밍밍이와 뿡뿡이</a></h1>
-<ol>
-  <li><a href="2.html" style="color:red;text-decoration:underline">밍밍이</a></li>
-  <li><a href="2.html">뿡뿡이</a></li>
+<h1><a href="index.html" style="color:pink">밍밍이와 뿡뿡이</a></h1>
+<div id="grid">
+  <ol>
+  <li><a href="2.html" style="text-decoration:underline" class="saw" id="active">밍밍이</a></li>
+  <li><a href="2.html" class="saw">뿡뿡이</a></li>
 </ol>
-
+<div id="article">
 <h2>밍밍이</h2>
 <p>
-  <iframe width="560" height="315" src="밍밍이영상.mp4" frameborder="0" allowfullscreen></iframe>
+  <iframe width="350" height="315" src="밍밍이영상.mp4" frameborder="0" allowfullscreen></iframe>
 </p>
 <p>밍밍이(양00)는 12/30 오후 2시 50분에 태어났지만 민증에는 생년월일이 다르다.
 <br>착하고 이쁘고 섹시하고 공부도 잘한다.</p>
+</div>
+</div>
 </body>
 </html>
