--- a/2.html
+++ b/2.html
@@ -3,26 +3,24 @@
 <head>
   <title>밍♡뿡</title>
 <meta charset="utf-8">
-<style>
-  a {
-    color:black;
-    text-decoration:none;
-  }
-</style>
+<link rel="stylesheet" href="style.css"
 </head>
 
 <body>
-<h1><a href="index.html">밍밍이와 뿡뿡이</a></h1>
-<ol>
-  <li><a href="1.html">밍밍이</a></li>
-  <li><a href="2.html" style="color:red;text-decoration:underline">뿡뿡이</a></li>
+<h1><a href="index.html" style="color:pink">밍밍이와 뿡뿡이</a></h1>
+<div id="grid">
+  <ol>
+  <li><a href="1.html" class="saw">밍밍이</a></li>
+  <li><a href="2.html" style="text-decoration:underline" class="saw" id="active">뿡뿡이</a></li>
 </ol>
-
+<div id="article">
 <h2>뿡뿡이</h2>
 <p>
-  <iframe width="560" height="315" src="뿡뿡이영상.mp4" frameborder="0" allowfullscreen></iframe>
+  <iframe width="350" height="315" src="뿡뿡이영상.mp4" frameborder="0" allowfullscreen></iframe>
 </p>
 <p>뿡뿡이(정00)는 만우절에 태어났다.
 <br>나쁘고 못생겼지만 섹시하기는 하다. 공부쫌하자</p>
+</div>
+</div>
 </body>
 </html>
